--- a/WebPage-Complete to Project Ui/index.html
+++ b/WebPage-Complete to Project Ui/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="asserts/css/index_Styles.css">
 </head>
 <body>
-<section>
+<section id="home">
     <div>
         <img src="asserts/section_1/Profile%20PNG%201.png" alt="">
     </div>
@@ -23,22 +23,159 @@
     </div>
     <nav>
             <a ><button >Home</button></a>
-            <a href="project.html"><button >Project</button></a>
-            <a href="assignment.html"><button >Assignment</button></a>
-            <a href="skills.html"><button >Skills</button></a>
-            <a href="download.html"><button >Download</button></a>
-            <a href="contact.html"><button >Contact</button></a>
-            <a href="about_%20me.html"><button >About me</button></a>
+            <a href=""><button >Project</button></a>
+            <a href=""><button >Assignment</button></a>
+            <a href=""><button >Skills</button></a>
+            <a href=""><button >Download</button></a>
+            <a href=""><button >Contact</button></a>
+            <a href=""><button >About me</button></a>
     </nav>
     <div>
-        <img src="asserts/section_1/undraw_winter_walk_2yac.png" alt="">
+        <img src="asserts/section_1/1100.png" alt="">
     </div>
     <div>
         <img src="asserts/section_1/output-onlinepngtools%20(5).png" alt="">
     </div>
+    <div>
+        <div>
+            <a href="https://github.com/Gayash-Pro"><img src="asserts/section_1/links/GitHub_48px.png" alt=""></a>
+        </div>
+        <div>
+            <a href=""><img src="asserts/section_1/links/Google_48px.png" alt=""></a>
+        </div>
+        <div><a href=""><img src="asserts/section_1/links/Instagram_48px.png" alt=""></a>
+        </div>
+        <div>
+            <a href=""><img src="asserts/section_1/links/Facebook_48px.png" alt=""></a>
+        </div>
+        <div>
+            <a href=""><img src="asserts/section_1/links/Twitter_48px.png" alt=""></a>
+        </div>
+    </div>
 </section>
 
 
+<section>
+    <div class="div2">
+        <h2>What I Can?</h2>
+        <h1>SKILLS</h1>
+        <nav></nav>
+    </div>
+    <main>
+        <div>
+            <div>
+                <div style="background: #06C03A" class="progress"></div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <div style="background: #7F06C2" class="progress"></div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <div style="background: #BC0303" class="progress"></div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <div style="background: #EC850D" class="progress"></div>
+            </div>
+        </div>
+    </main>
+
+
+
+</section>
+
+
+
+<section>
+    <div class="div">
+        <h2>What I Do?</h2>
+        <h1>PROJECTS</h1>
+        <nav></nav>
+    </div>
+    <main>
+        <section>
+            <div>
+                <div>
+                    <h1>Project 01</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 02</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 03</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 04</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+
+            </div>
+            <div>
+                <div>
+                    <h1>Project 05</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 06</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 07</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 08</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h1>Project 09</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 10</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 11</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+                <div>
+                    <h1>Project 12</h1>
+                    <h2 style="font-size: 2px;font-weight: normal;font-size: 20px"> Lorem ipsum dolor sit amet, consectetur </h2>
+                    <button>more</button>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    <div>
+        <img src="asserts/project/undraw_maker_launch_crhe.png" alt="">
+    </div>
+
+
+</section>
+
+<section style="border: 2px dashed black"></section>
 
 </body>
 </html>
